deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: quay.io/hiphipjorge/kubernetes-lest-encrypt-http:latest
          ports:
          - containerPort: 80
