app.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: quay.io/hiphipjorge/kubernetes-lest-encrypt-http:latest
          ports:
          - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
                - name: X-Custom-Header
                  value: Awesome
            initialDelaySeconds: 3
            periodSeconds: 3
