nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - protocol: "TCP"
    nodePort: 32111
    port: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-configs
          mountPath: /etc/nginx/conf.d
        livenessProbe:
          httpGet:
            path: /
            port: 80
            httpHeaders:
              - name: X-Custom-Header
                value: Awesome
          initialDelaySeconds: 3
          periodSeconds: 3
      volumes:
        - name: nginx-configs
          configMap:
            name: nginx-config
