ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kubernetes-demo-app-ingress-service"
  labels:
    last_updated: "1494098991"
spec:
  tls:
  - hosts:
    - kubernetes-letsencrypt.jorge.fail
    secretName: letsencrypt-certs
  rules:
  - host: kubernetes-letsencrypt.local
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
  # Real domain exposed to the internet
  - host: kubernetes-letsencrypt.jorge.fail
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
